[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-dbalib"
version = "0.1.0"
description = "Local study package with bundled course documents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Local Course Materials" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mysql_dbalib = [
  "resources/documents/*",
  "resources/documents/**/*",
  "resources/documents/.gitkeep"
]
